--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -448,6 +448,11 @@
         max-width: 38%;
         font-weight: normal;
         font-family: Nunito;
+
+        .helper {
+          font-size: 20px;
+          margin-top: -5px;
+        }
       }
 
       .filters {
