Issue #1780 follow-up [ci skip]

--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -6,16 +6,17 @@ $color-text:       #808080;
 $color-background: #ccc;
 $color-dark-background: #808080;
 $color-dark-blue:  #00374f;
+$color-light-blue: #29c2ff;
+$color-lighter-blue: #06B9FF;
 $color-light-background: #0393db;
 $color-gray:       #b1b1b1;
-$color-gray-border: #d9d9d9;
 $color-light-gray: #e6e6e6;
 $color-dark-gray:  #848484;
 $color-darker-gray: #6b6b6b;
+$color-gray-border: #d9d9d9;
 $color-red:        #ff0000;
 $color-red-alert:  #d62766;
 $color-green-alert: #86a156;
-$color-light-blue: #29c2ff;
 $color-white:      #ffffff;
 $color-symptom-general: #D4145A;
 $color-symptom-respiratory: #F7931E;
