--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1884,13 +1884,43 @@ div.page-report.acute-illness {
     div.pane.symptoms .symptoms-table .symptoms-table-row {
       display: grid;
       grid-gap: 20px;
-      grid-template-columns: 15% auto;
+      grid-template-columns: 15% 5px auto;
     }
 
     div.pane.symptoms .symptoms-table .symptoms-table-row .date {
       color: $color-text;
       font-weight: 600;
       margin: auto 0 auto auto;
+    }
+
+    div.pane.symptoms .symptoms-table .symptoms-table-row .timeline {
+      height: 100%;
+
+      .line {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
+
+        img {
+          margin-left: -6px;
+          width: 12px;
+        }
+
+        &.half {
+          height: 50%;
+          justify-content: start;
+
+          img {
+            margin-top: -7px;
+          }
+        }
+
+        &.blue {
+          border-left: 1px solid $color-lighter-blue;
+        }
+      }
     }
 
     div.pane.symptoms .symptoms-table .symptoms-table-row ul {
