--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -592,6 +592,11 @@
     }
   }
 
+  .case-management .header .filters {
+    margin-bottom: 10px;
+    margin-top: 0;
+  }
+
   .dashboards-links {
 
     > div {
