--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -1158,6 +1158,7 @@ input::placeholder {
 
       .popup-heading-wrapper {
         height: 48px;
+        text-align: center;
         margin-bottom: 1rem;
 
         img {
@@ -1167,13 +1168,12 @@ input::placeholder {
 
         .popup-heading {
           color: $color-dark-grey;
-          float: left;
           font-size: 30px;
           font-weight: bold;
           line-height: 48px;
           text-align: center;
           text-transform: uppercase;
-          width: 400px;
+          min-width: 400px;
         }
       }
 
