style the logout button

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -254,6 +254,7 @@ div.page-pincode {
     border: 2px solid $color-white;
     position: absolute;
     bottom: 0;
+    margin-top: 2rem;
     width: 89%;
   }
 
