Apply logic to desplay/hide Contact HC task

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -1834,7 +1834,7 @@ input::placeholder {
   }
 }
 
-.icon-next-steps-contact-hc {
+.icon-next-steps-call {
   .active &:after {
     background-image: url(#{$img-path}icon-contact-hc-white.svg), url(#{$img-path}icon-selected-circle.svg);
   }
