Style and view treatment comments

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1922,7 +1922,19 @@ div.page-report.acute-illness {
     }
 
     div.pane.assessment .pane-content {
-      color: $color-red-alert;
+
+      .diagnosis {
+        color: $color-red-alert;
+        margin-bottom: 10px;
+      }
+
+      .treatment-comment {
+        color: $color-text;
+        font-size: 20px;
+        line-height: 22px;
+        margin-bottom: 7px;
+        text-transform: none;
+      }
     }
 
     div.pane.symptoms .symptoms-table .symptoms-table-row {
