--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1931,9 +1931,14 @@ div.page-report.acute-illness {
       .treatment-comment {
         color: $color-text;
         font-size: 20px;
+        font-weight: normal;
         line-height: 22px;
         margin-bottom: 7px;
         text-transform: none;
+
+        b {
+          margin-left: 5px;
+        }
       }
     }
 
