Improve view [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -273,6 +273,10 @@ div.page-pincode {
     margin-bottom: 40px;
   }
 
+  .general-sync .sync-status {
+    margin-bottom: 20px;
+  }
+
   .health-centers .health-center {
     padding-bottom: 20px;
     margin-bottom: 40px;
