Alignign UI [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -209,6 +209,14 @@ div.language-switcher {
   }
 }
 
+details.sync-manager {
+  padding: 15px;
+
+  .segment.ui {
+    padding: 10px;
+  }
+}
+
 div.page-pincode {
   font-size: 1.72rem; //24px;
   text-align: center;
