Allow syncing only HCs to which nurse is assigned

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -285,6 +285,12 @@ div.page-pincode {
     margin-bottom: 20px;
   }
 
+  .login-request {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+  }
+
   .health-centers .health-center {
     padding-bottom: 20px;
     margin-bottom: 40px;
