--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1824,6 +1824,7 @@ div.page-participant.prenatal {
     align-items: center;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 10px;
 
     .button-label {
       text-align: left;
