--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -213,6 +213,7 @@ div.page-pincode {
   font-size: 1.72rem; //24px;
   text-align: center;
   flex: 1;
+  padding-bottom: 100px !important;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -252,10 +253,9 @@ div.page-pincode {
   button.ui.logout.button {
     background: $color-light-background;
     border: 2px solid $color-white;
-    position: relative;
+    position: absolute;
     bottom: 0;
-    margin-top: 2rem;
-    width: 100%;
+    width: 89%;
   }
 
   // Maintaing margin from 'sign out' button when selecting health center.
