View infrastructure [ci skip]

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -447,6 +447,11 @@ h3.ui.header {
   background-size: 78px 78px;
 }
 
+.icon-task-ongoing-treatment {
+  background-image: url(#{$img-path}icon-ongoing-treatment.svg);
+  background-size: 78px 78px;
+}
+
 // Tasks horizontal scroll
 
 .ui.task.segment {
