--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -252,7 +252,8 @@ div.page-pincode {
   button.ui.logout.button {
     background: $color-light-background;
     border: 2px solid $color-white;
-    margin-top:auto;
+    margin-bottom: 0;
+    margin-top: auto;
     width: 100%;
   }
 
