Code review fix

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -910,6 +910,7 @@ div.page-activity.acute-illness {
         font-size: 22px;
         font-weight: bold;
         height: 35px;
+        text-align: center;
         text-align: -webkit-center;
         width: 100%;
       }
@@ -1008,6 +1009,7 @@ div.page-activity.nutrition {
           border: 2px solid $color-grey-border;
           background-color: $color-white;
           width: 100%;
+          text-align: center;
           text-align: -webkit-center;
           font-weight: bold;
         }
