--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -494,7 +494,7 @@
           display: inline-block;
           font-size: 15px;
           line-height: 22px;
-          color: $color-light-grey;
+          color: $color-light-gray;
           padding: 2px 10px;
 
           svg {
@@ -527,7 +527,7 @@
           }
 
           text {
-            fill: $color-light-grey;
+            fill: $color-light-gray;
             font-size: 20px;
             text-transform: uppercase;
             line-height: 22px;
