--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -475,7 +475,7 @@ div.page-activity {
         input,
         select {
           background-color: $color-white;
-          border: 2px solid $color-grey-border;
+          border: 2px solid $color-gray-border;
           color: $color-text;
           float: left;
           width: 60%;
@@ -501,7 +501,7 @@ div.page-activity {
           width: 26px;
           height: 26px;
           border-radius: 13px;
-          border: 2px solid $color-grey-border;
+          border: 2px solid $color-gray-border;
           background-color: transparent;
         }
 
@@ -821,7 +821,7 @@ div.page-activity.acute-illness {
 
     .form-input.period {
       background: $color-white;
-      border: 2px solid $color-lighter-grey;
+      border: 2px solid $color-lighter-gray;
       margin-bottom: 0;
       margin-top: -10px;
       padding: 5px;
@@ -841,7 +841,7 @@ div.page-activity.acute-illness {
 
       input {
         background-color: $color-white;
-        border: 2px solid $color-grey-border;
+        border: 2px solid $color-gray-border;
         float: left;
         width: 60%;
       }
@@ -862,7 +862,7 @@ div.page-activity.acute-illness {
 
       label:before {
         background-color: transparent;
-        border: 2px solid $color-grey-border;
+        border: 2px solid $color-gray-border;
         border-radius: 13px;
         content: " ";
         display: inline-block;
@@ -896,7 +896,7 @@ div.page-activity.acute-illness {
 
     .form-input.rapid-test-result {
       background: $color-white;
-      border: 2px solid $color-lighter-grey;
+      border: 2px solid $color-lighter-gray;
       color: $color-text;
       padding: 5px;
       width: 60%;
@@ -954,7 +954,7 @@ div.page-activity.nutrition {
       // Pregnanacy Dating Inputs
       &.range {
         background: $color-white;
-        border: 2px solid $color-light-grey;
+        border: 2px solid $color-light-gray;
         padding: 5px;
         width: 50%;
       }
@@ -970,7 +970,7 @@ div.page-activity.nutrition {
 
         .dropdown--button-container {
           background: $color-white;
-          border: 2px solid $color-light-grey;
+          border: 2px solid $color-light-gray;
 
           input {
             border: 0;
@@ -981,7 +981,7 @@ div.page-activity.nutrition {
 
       &.hiv-test-result {
         background: $color-white;
-        border: 2px solid $color-light-grey;
+        border: 2px solid $color-light-gray;
         margin-top: 15px;
         padding: 5px;
         width: 73%;
@@ -992,7 +992,7 @@ div.page-activity.nutrition {
         margin-bottom: 10px;
 
         input {
-          border: 2px solid $color-grey-border;
+          border: 2px solid $color-gray-border;
           background-color: $color-white;
           width: 100%;
           text-align: -webkit-center;
@@ -1019,7 +1019,7 @@ div.page-activity.nutrition {
 
         input {
           background-color: $color-white;
-          border: 2px solid $color-grey-border;
+          border: 2px solid $color-gray-border;
           float: left;
           width: 60%;
         }
@@ -1048,7 +1048,7 @@ div.page-activity.nutrition {
           width: 26px;
           height: 26px;
           border-radius: 13px;
-          border: 2px solid $color-grey-border;
+          border: 2px solid $color-gray-border;
           background-color: transparent;
         }
 
@@ -1087,7 +1087,7 @@ div.page-activity.nutrition {
     }
 
     .separator {
-      color: $color-light-grey;
+      color: $color-light-gray;
       margin: 30px 0;
       width: 100%;
       border: 1px solid;
@@ -1258,7 +1258,7 @@ div.page-pregnancy-outcome {
 
         .dropdown--button-container {
           background: $color-white;
-          border: 2px solid $color-light-grey;
+          border: 2px solid $color-light-gray;
 
           input {
             border: 0;
@@ -1269,7 +1269,7 @@ div.page-pregnancy-outcome {
 
       &.pregnancy-outcome {
         background: $color-white;
-        border: 2px solid $color-light-grey;
+        border: 2px solid $color-light-gray;
         padding: 5px;
         width: 73%;
       }
@@ -1293,7 +1293,7 @@ div.page-pregnancy-outcome {
           width: 26px;
           height: 26px;
           border-radius: 13px;
-          border: 2px solid $color-grey-border;
+          border: 2px solid $color-gray-border;
           background-color: transparent;
         }
 
@@ -1320,7 +1320,7 @@ div.page-pregnancy-outcome {
 
 div.page-clinical-progress-report,
 div.page-demographics-report {
-  background: $color-light-grey;
+  background: $color-light-gray;
   padding: 0 20px 35px 20px;
   height: 100%;
   display: flex;
@@ -1414,8 +1414,8 @@ div.page-clinical-progress-report {
       }
 
       .gravida {
-        border-left: 1px solid $color-light-grey;
-        border-right: 1px solid $color-light-grey;
+        border-left: 1px solid $color-light-gray;
+        border-right: 1px solid $color-light-gray;
         text-align: center;
       }
 
@@ -1437,7 +1437,7 @@ div.page-clinical-progress-report {
           }
 
           .term, .pre-term, .abortions {
-            border-right: 1px solid $color-light-grey;
+            border-right: 1px solid $color-light-gray;
           }
         }
       }
@@ -1522,7 +1522,7 @@ div.page-clinical-progress-report {
           }
 
           p.gray {
-            border-top: 10px solid $color-light-grey;
+            border-top: 10px solid $color-light-gray;
           }
 
           span {
@@ -1561,7 +1561,7 @@ div.page-clinical-progress-report {
       grid-template-columns: 25% 25% 40%;
 
       .trimester-visits {
-        border-left: 1px solid $color-light-grey;
+        border-left: 1px solid $color-light-gray;
         font-size: 16px;
         padding-left: 10px;
         padding-top: 30px;
@@ -1600,7 +1600,7 @@ div.page-clinical-progress-report {
         }
 
         .ega {
-          background-color: $color-grey;
+          background-color: $color-gray;
           color: $color-white;
           font-size: 16px;
           font-weight: bold;
@@ -1630,7 +1630,7 @@ div.page-clinical-progress-report {
       }
 
       table {
-        color: $color-darker-grey;
+        color: $color-darker-gray;
         margin-bottom: -20px;
 
         th, td {
@@ -1646,13 +1646,13 @@ div.page-clinical-progress-report {
         }
 
         th {
-          background-color: $color-light-grey;
+          background-color: $color-light-gray;
         }
 
       }
 
       .illustrative-purposes {
-        color: $color-darker-grey;
+        color: $color-darker-gray;
         margin-bottom: 50px;
         margin-top: -90px;
         font-size: 12px;
@@ -1680,7 +1680,7 @@ div.page-demographics-report {
     margin-top: 20px;
 
     .thead {
-      border-bottom: 2px solid $color-light-grey;
+      border-bottom: 2px solid $color-light-gray;
       width: 95%;
 
       .label {
@@ -1693,7 +1693,7 @@ div.page-demographics-report {
     }
 
     .row {
-      border-bottom: 1px solid $color-light-grey;
+      border-bottom: 1px solid $color-light-gray;
       height: 24px;
       width: 95%;
 
@@ -1845,7 +1845,7 @@ div.page-participant.prenatal {
 }
 
 div.page-report.acute-illness {
-  background: $color-lighter-grey;
+  background: $color-lighter-gray;
   padding: 20px;
 
   .ui.report.unstackable.items {
