Post merge fix [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -906,7 +906,7 @@ div.page-activity.acute-illness {
 
       input {
         background-color: $color-white;
-        border: 2px solid $color-grey-border;
+        border: 2px solid $color-gray-border;
         font-size: 22px;
         font-weight: bold;
         height: 35px;
@@ -1350,7 +1350,7 @@ div.page-outcome.pregnancy {
 
       &.pregnancy-outcome {
         background: $color-white;
-        border: 2px solid $color-light-grey;
+        border: 2px solid $color-light-gray;
         padding: 5px;
         width: 73%;
       }
