--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -26,6 +26,8 @@ $color-svg-grid:            #8097B1;
 $color-symptom-general:     #D4145A;
 $color-symptom-respiratory: #F7931E;
 $color-symptom-gi:          #4C06FF;
+$color-green:               #25D625;
+$color-yellow:              #D9E021;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
