Improve error log styling

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -209,7 +209,20 @@ div.language-switcher {
   }
 }
 
+details.error-log {
+  color: $color-orange;
+  max-height: 500px;
+  overflow: auto;
+  padding: 15px;
+
+  ol {
+    font-size: 18px;
+  }
+
+}
+
 details.sync-manager {
+  color: $color-orange;
   padding: 15px;
 
   .segment.ui {
