--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -211,14 +211,14 @@ div.language-switcher {
 
 details.error-log {
   color: $color-orange;
-  max-height: 500px;
-  overflow: auto;
   padding: 15px;
 
   ol {
+    background: $color-white;
     font-size: 18px;
+    max-height: 400px;
+    overflow: auto;
   }
-
 }
 
 details.sync-manager {
