Display number of entries remianing at shardChanges table on sync screen

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -294,7 +294,7 @@ div.page-pincode {
     margin-bottom: 40px;
   }
 
-  .general-sync .sync-status {
+  .general-sync .total-to-upload {
     margin-bottom: 20px;
   }
 
