Addapt the pane

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2018,6 +2018,12 @@ div.page-report.acute-illness {
         margin-bottom: 10px;
       }
 
+      .visit-date {
+        color: $color-light-blue;
+        font-size: 20px;
+        margin-bottom: 5px;
+      }
+
       .treatment-comment {
         color: $color-text;
         font-size: 20px;
