View health education form [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -812,7 +812,8 @@ div.page-activity.acute-illness {
     }
 
     .ui.form.medication-distribution,
-    .ui.form.send-to-hc {
+    .ui.form.send-to-hc,
+    .ui.form.health-education {
 
       h2 {
         text-transform: uppercase;
