View modal + functionality + styling [ci skip]

--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -33,6 +33,17 @@
           float: right;
         }
       }
+
+      .icon-settings {
+        background: url(#{$img-path}icon-settings.svg);
+        background-size: 24px 24px;
+        display: block;
+        float: right;
+        height: 24px;
+        margin-left: 8px;
+        margin-top: 4px;
+        width: 24px;
+      }
     }
 
     .content {
@@ -175,6 +186,49 @@
     }
   }
 
+  &.main {
+
+    .overlay .ui.modal {
+      margin-left: -350px;
+      width: 700px;
+
+      .header {
+        font-size: 30px;
+        font-weight: 500;
+        margin-bottom: 25px;
+        text-align: left;
+        text-transform: capitalize;
+      }
+
+      .content {
+        text-align: left;
+
+        .helper {
+          font-size: 18px;
+          font-weight: bold;
+          margin-bottom: 3px;
+        }
+
+        .select-input {
+          background: none;
+          border: 2px solid $color-gray;
+          font-size: 28px;
+          height: 50px;
+          padding: 0 7px;
+          width: 100%;
+        }
+      }
+
+      .actions {
+        margin-top: 40px;
+
+        button {
+          margin-left: 0;
+        }
+      }
+    }
+  }
+
   &.stats {
 
     .ui.grid {
@@ -184,10 +238,10 @@
     .overlay {
 
       .ui.modal {
-        margin-left: -365px !important;
-        width: 730px !important;
+        margin-left: -365px;
         height: 400px;
         overflow: scroll;
+        width: 730px;
 
         .header {
           padding: 0;
