--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -1073,14 +1073,14 @@ input::placeholder {
 
 .ui.modal {
   border-radius: 0;
-  width: 426px !important; //temp
-  margin-left: -213px !important; //temp
   box-shadow: 0 0 8px rgba(0,0,0,0.2);
+  margin-left: -213px;
+  width: 426px;
 
   &.alerts-dialog {
     border-top: 7px solid $color-velvet;
-    width: 700px !important;
-    margin-left: -350px !important;
+    margin-left: -350px;
+    width: 700px;
 
     > .content {
       display: inline-block;
@@ -1147,8 +1147,8 @@ input::placeholder {
 
   &.diagnosis-popup {
     border-top: 15px solid $color-red-alert;
-    margin-left: -300px !important;
-    width: 600px !important;
+    margin-left: -300px;
+    width: 600px;
 
     > .content {
       display: inline-block;
