--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -214,6 +214,7 @@
           border: 2px solid $color-gray;
           font-size: 28px;
           height: 50px;
+          margin-bottom: 20px;
           padding: 0 7px;
           width: 100%;
         }
