View form [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -1294,8 +1294,8 @@ div.page-activity.nutrition {
       min-height: 210px;
     }
 
-    .ui.form.send-to-hc {
-
+    .ui.form.send-to-hc,
+    .ui.form.health-education {
       h2 {
         text-transform: uppercase;
       }
