--- a/client/src/assets/scss/_dashboard.scss
+++ b/client/src/assets/scss/_dashboard.scss
@@ -11,6 +11,10 @@
 
       .label {
         color: $color-white;
+        padding-right: 30px
+      }
+      .village-label {
+        color: $color-white;
       }
 
       .ui.button {
