View diagnosis with dates

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -2021,6 +2021,10 @@ div.page-report.acute-illness {
         p {
           margin-bottom: 5px;
         }
+
+        .diagnosis-date {
+          color: $color-light-blue;
+        }
       }
 
       .visit-date {
