Add and style icon [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -63,6 +63,13 @@
           margin-right: 5px;
           width: 50px;
         }
+
+        &.icon-open-book {
+          background: url(#{$img-path}icon-open-book.svg) center center no-repeat;
+          background-size: 36px 36px;
+          height: 36px;
+          width: 52px;
+        }
       }
     }
 
