--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -77,7 +77,7 @@
       margin-left: 54px;
     }
 
-    .non-administration-reason {
+    .icon-label {
       align-items: center;
       display: flex;
     }
