View alerts + style

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -857,6 +857,13 @@ div.page-activity.acute-illness {
 
     }
 
+    .ui.form.physical-exam.vitals {
+
+      .label {
+        line-height: 40px;
+      }
+    }
+
     .label {
       margin-bottom: 5px;
     }
